Bug 100574 - anv_device.c:189: undefined reference to `anv_gem_supports_48b_addresses'
Summary: anv_device.c:189: undefined reference to `anv_gem_supports_48b_addresses'
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: mesa-dev
QA Contact: mesa-dev
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2017-04-05 06:26 UTC by Vinson Lee
Modified: 2017-04-05 21:29 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2017-04-05 06:26:34 UTC
mesa: d5ee55f028883748eadd8eec9070b475c200871c (master 17.1.0-devel)

  CCLD     vulkan/tests/block_pool_no_free
vulkan/.libs/libvulkan-test.a(vulkan_libvulkan_common_la-anv_device.o): In function `anv_physical_device_init':
src/intel/vulkan/anv_device.c:189: undefined reference to `anv_gem_supports_48b_addresses'
vulkan/.libs/libvulkan-test.a(vulkan_libvulkan_common_la-anv_device.o): In function `anv_compute_heap_size':
src/intel/vulkan/anv_device.c:61: undefined reference to `anv_gem_get_context_param'
vulkan/.libs/libvulkan-test.a(vulkan_libvulkan_common_la-anv_device.o): In function `anv_device_query_status':
src/intel/vulkan/anv_device.c:1310: undefined reference to `anv_gem_gpu_get_reset_stats'
Comment 1 Vinson Lee 2017-04-05 21:29:37 UTC
commit a6840efc096bd26e92bcee1a50515d845988a2f9
Author: Emil Velikov <emil.velikov@collabora.com>
Date:   Wed Apr 5 17:52:51 2017 +0100

    anv: provide required gem stubs for the tests
    
    Introduce stubs to anv_gem_stub.c that match the anv_gem.c ones.
    Otherwise we may get link-time errors, when building the tests.
    
    v2: Introduce all the missing stubs at once.
    
    Cc: Jason Ekstrand <jason@jlekstrand.net>
    Cc: Vinson Lee <vlee@freedesktop.org>
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=100574
    Fixes: c964f0e485d ("anv: Query the kernel for reset status")
    Fixes: 651ec926fc1 ("anv: Add support for 48-bit addresses")
    Fixes: 060a6434eca ("anv: Advertise larger heap sizes")
    Signed-off-by: Emil Velikov <emil.velikov@collabora.com>
    ---
    I've intentionally kept the order the same identical to the anv_gem.c.
    This way we can easily grep & diff in the future ;-)


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.